change layout with new logo

--- a/views/headpanel.ejs
+++ b/views/headpanel.ejs
@@ -4,7 +4,7 @@
 		CÔNG TY TNHH KỸ THUẬT THƯƠNG MẠI T&As -->
 	<div class="menuWrp">
 		<div class="container">
-			<img class="logoWrp img-circle" src="./image/icon/logo3.png" style="position: absolute;">
+			<img class="logoWrp " src="./image/icon/logo.png" style="position: absolute;">
 			<% include menu.ejs %>
 		</div>
 	</div>
