--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,14 @@
 .header{
-	background-color: rgb(255, 221, 0);
+	background-color: rgb(255, 255, 255);
 	min-width: 1170px;
+	background-image: url(../image/wallpaper.jpg);
+	background-repeat: no-repeat;
+    background-size: 100% 100%;
+	height: 400px;
 }
 body {
-	background-color :#000;
-/* 	background-color :rgb(228, 225, 227); */
+	/*background-color :#000;*/
+ 	background-color :rgb(228, 225, 227); 
 	font: 12px Arial, Helvetica, sans-serif;
 	color: #111;
 	min-width: 600px;
@@ -19,23 +23,24 @@ div {
 	text-wrap: unrestricted;
 }
 .menuWrp {
-	background-color: rgb(255, 221, 0);
+	background-color: #428bca;
 	position: fixed;
 	top: 0px;
 	z-index: 1000;
 	width: 100%;
-	border-bottom: #000 solid 1px;
+	/*border-bottom: #0b7cc2 solid 1px;*/
 	height: 38px;
 }
 .menu{
 	/* background-color: #2f333f; */
+	margin-left: 50px;
 	margin-top: 0px;
 	padding:10px 15px 0px 10px;
 	min-width: 640px;
 }
 .main-footer {
 	height: 80px;
-	background-color: #000;
+	background-color: #428bca;
 	padding-bottom: 20px;
 	padding-top: 10px;
 	color: #fff;
@@ -48,7 +53,7 @@ div {
 	width: 100%;
 	position: fixed;
 	bottom: 0px;
-	background-color: #000;
+	background-color: #428bca;
 	color: #fff;
 	z-index: 100;
 	opacity:0.9;
@@ -59,19 +64,20 @@ div {
 }
 a.menuItem {
 	padding: 11px 5px ;
-	color: #000;
+	color: #fff;
 	margin-right: 15px;
 	font-size: 13px;
-/* 	font-weight: bold; */
+ 	/*font-weight: bold; */
 }
 a.menuItem.crrLink {
 	/* background-color: rgb(255, 221, 0); */
-	/* color: #111; */
+	/* color: #428bca; */
+	color: #fff; 
+
 	font-weight: bold;
 }
 a.menuItem:HOVER{
 	border-bottom: solid 2px #fff; 
-	color: #222;
 }
 button {
 	background-color: #222;
@@ -208,13 +214,13 @@ ul {
 .menu>ul>li>ul>li {
 	margin-bottom: 1px;
 	padding: 5px 10px;
-	background-color: rgb(255, 221, 0);
+	background-color: #fff;
 }
 .menu>ul>li>ul>li:HOVER {
-	background-color: #000;
+	background-color: #0b7cc2;
 }
 .menu>ul>li>ul>li>a {
-	color: #000;
+	color: #3C76A8;
 }
 .menu>ul>li>ul>li>a:HOVER, .menu>ul>li>ul>li:HOVER>a {
 	color: #fff;
@@ -223,16 +229,18 @@ A:link {
 	text-decoration: none !important;
 }
 .logoWrp {
-	margin: 2px 2px 2px 12px;
+	margin: 3px 2px 2px 0px;
 	height: 30px;
 	background-color: white;
+	border-radius: 25%;
 }
 .panelWrp {
 	/* margin-bottom:10px; */
 	margin-top: 20px;
+	display: none;
 	background-attachment: scroll;
-	background-color: rgb(255, 221, 0);
-	background-image: url(../image/panel7.png);
+	/*background-color: rgb(255, 255, 255);*/
+	background-image: url(../image/panel8.png);
 	background-position: left bottom;
 /* 	background-position: center bottom; */
 	background-repeat: no-repeat;
