--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ body {
  	background-color :rgb(228, 225, 227); 
 	font: 12px Arial, Helvetica, sans-serif;
 	color: #111;
-	min-width: 600px;
+	min-width: 1300px;
 	height: 100%;
 	width: 100%;
 }
@@ -45,11 +45,11 @@ div {
 	padding-top: 10px;
 	color: #fff;
 	margin-top: 30px;
+	width: 100%;
 }
 .fix-footer{
 	height: 25px;
-	text-align: right;
-	pading: 0px 5px 0px 0px;
+	text-align: right;	
 	width: 100%;
 	position: fixed;
 	bottom: 0px;
@@ -57,6 +57,7 @@ div {
 	color: #fff;
 	z-index: 100;
 	opacity:0.9;
+	padding: 0px 5px 0px 0px;
 }
 .fix-footer .hotline {
 	margin: 5px;
@@ -311,7 +312,7 @@ A:link {
 }
 .galerrytrangchu{
 	padding-top: 20px;
-	height: 665px;
+	height: 640px;
 	overflow: hidden;
 }
 .galerrytrangchuWrp {
