--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,8 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta id="viewport" name="viewport" content="width=device-width, height=device-height, minimum-scale=0.2, maximum-scale=1.5, user-scalable=yes" />
 
 <title>CÔNG TY TNHH KỸ THUẬT THƯƠNG MẠI T&A</title>
 
