update lay out: cat hinh lai hinh nen, them 3 san pham

--- a/views/childpage/blockcacsanphamtrangchu.ejs
+++ b/views/childpage/blockcacsanphamtrangchu.ejs
@@ -2,27 +2,27 @@
 	<div class="row">
 			<div class="col-xs-12 " >
 				<div class="row" >
-					<div class="sanphamava label-xanhlam  ">
+					<div class="sanphamava label-primary  " onclick="window.location = '/sanpham?sub=PPR_Wavin_Ekoplastik'">
 						<p>
 							<h5 class="text-center">
-								Nhà phân phối ống nhưa
+								Nhà phân phối ống nhựa
 							</h5>
 							<h4 class="text-center">
 								PPR Wavin Ekoplastik
 							</h4>
 						</p>
 					</div>
-					<div class="sanphamava label-primary  ">
+					<div class="sanphamava label-primary  " onclick="window.location = '/sanpham?sub=PPR_Wavin_Pilsa'">
 						<p>
 							<h5 class="text-center">
-								Nhà phân phối ống nhưa
+								Nhà phân phối ống nhựa
 							</h5>
 							<h4 class="text-center">
 								PPR Wavin Pilsa
 							</h4>
 						</p>
 					</div>
-					<div class="sanphamava label-xanhlam ">
+					<div class="sanphamava label-primary " onclick="window.location = '/sanpham?sub=Wavin_AS'">
 						<p>
 							<h5 class="text-center">
 								Nhà phân phối ống thoát giảm âm
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-4 sanphamava label-primary ">
+					<div class="col-xs-4 sanphamava label-primary " onclick="window.location = '/sanpham?sub=van_giam_ap_RBM'">
 						<p>
 							<h5 class="text-center">
 								Nhà phân phối 
@@ -44,7 +44,7 @@
 							</h4>
 						</p>
 					</div>
-					<div class="col-xs-4 sanphamava label-xanhlam ">
+					<div class="col-xs-4 sanphamava label-primary " onclick="window.location = '/sanpham?sub=Vat_tu_phu'">
 						<p>
 							<h5 class="text-center">
 								Sản xuất	
@@ -54,13 +54,45 @@
 							</h4>
 						</p>
 					</div>
-					<div class="col-xs-4 sanphamava  label-primary">
+					<div class="col-xs-4 sanphamava  label-primary" onclick="window.location = '/sanpham?sub=Xay_lap_co_dien'">
 						<p>
 							<h5 class="text-center">
 								Thi công	
 							</h5>
 							<h4 class="text-center">
 								Xây lắp cơ điện
+							</h4>
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-4 sanphamava label-primary " onclick="window.location = '/sanpham?sub=van_giam_ap_RBM'">
+						<p>
+							<h5 class="text-center">
+								Nhà phân phối 
+							</h5>
+							<h4 class="text-center">
+								Dây, Cáp điện
+							</h4>
+						</p>
+					</div>
+					<div class="col-xs-4 sanphamava label-primary " onclick="window.location = '/sanpham?sub=Day_cap_dien'">
+						<p>
+							<h5 class="text-center">
+								Nhà phân phối	
+							</h5>
+							<h4 class="text-center">
+								Thiết bị điện Panasonic
+							</h4>
+						</p>
+					</div>
+					<div class="col-xs-4 sanphamava  label-primary" onclick="window.location = '/sanpham?sub=Xay_lap_co_dien'">
+						<p>
+							<h5 class="text-center">
+								Nhà phân phối	
+							</h5>
+							<h4 class="text-center">
+								Thiết bị điện Schneider
 							</h4>
 						</p>
 					</div>
