--- a/views/childpage/hotrotructuyen.ejs
+++ b/views/childpage/hotrotructuyen.ejs
@@ -1,6 +1,9 @@
 <div class="hotrotructuyen blockWrp">
 	<p><strong>HỖ TRỢ TRỰC TUYẾN</strong></p>
 	<p>Hotline: <span class="label label-primary">0989 25 99 37</span></p>
-	<p>Yahoo:&nbsp;&nbsp; <span class="label label-primary">nguyenanhtaidl@yahoo.com</span></p>
-	<p>Email:&nbsp;&nbsp;&nbsp;&nbsp; <span class="label label-primary">nguyenanhtaidl@gmail.com</span></p>
+	<p>Yahoo:&nbsp;&nbsp; <span class="label label-primary">
+		<a href="mailto:nguyenanhtaidl@yahoo.com">nguyenanhtaidl@yahoo.com</a></span>
+	</p>
+	<p>Email:&nbsp;&nbsp;&nbsp;&nbsp; <span class="label label-primary">
+		<a href="mailto:nguyenanhtaidl@yahoo.com">nguyenanhtaidl@gmail.com</a></span></p>
 </div>
