--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,6 +7,10 @@
 		<p class="text-center">
 			Điện thoại: 0989 25 99 37 - Email: nguyenanhtaidl@gmail.com
 		</p>
+
+		<p class="text-center">
+			Website: http://tame.com.vn
+		</p>
 	</div>
 	<div class="fix-footer">
 		<div class="container-fluid">
