--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -52,6 +52,15 @@
 				<li>
 					<a>Thi công cơ điện</a>
 				</li>
+				<li>
+					<a>Nhà phân phối dây, cáp điện</a>
+				</li>
+				<li>
+					<a>Nhà phân phối thiết bị điện Panasonic</a>
+				</li>
+				<li>
+					<a>Nhà phân phối thiết bị điện Schnider</a>
+				</li>
 			</ul>
 		</li>
 		<li>
