--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 	background-image: url(../image/wallpaper.jpg);
 	background-repeat: no-repeat;
     background-size: 100% 100%;
-	height: 400px;
+	height: 230px;
 }
 body {
 	/*background-color :#000;*/
@@ -39,7 +39,7 @@ div {
 	min-width: 640px;
 }
 .main-footer {
-	height: 80px;
+	height: 100px;
 	background-color: #428bca;
 	padding-bottom: 20px;
 	padding-top: 10px;
@@ -209,7 +209,7 @@ ul {
 	padding: 0px;
 	display: none;
 	margin-top: 13px;	
-	background-color: #fff;
+	background-color: #E3EDF5;
 	opacity: 1;
 }
 .menu>ul>li>ul>li {
@@ -283,6 +283,9 @@ A:link {
 .hotrotructuyen {
 	margin-top: 18px;
 }
+.hotrotructuyen a {
+	color: #fff;
+}
 .blocksanphamtrangchu{
 	/* min-width: 1170px; */
 	/* background-color:rgb(6, 122, 199); */
@@ -306,13 +309,14 @@ A:link {
 .sanphamava:HOVER{
 	opacity: 1;
 	box-shadow: 4px 4px 5px #888888;
+	background-color: rgb(52, 74, 184);
 }
 .label-xanhlam {
 	background-color: rgb(52, 74, 184);
 }
 .galerrytrangchu{
 	padding-top: 20px;
-	height: 640px;
+	height: 730px;
 	overflow: hidden;
 }
 .galerrytrangchuWrp {
@@ -329,9 +333,9 @@ A:link {
 } 
 .galerrytrangchuWrp .imageWrp img{
 	width: 190px;
-	-webkit-filter: grayscale(100%);
-	-moz-filter: grayscale(100%);
-	filter: grayscale(100%);	
+	-webkit-filter: grayscale(10%);
+	-moz-filter: grayscale(10%);
+	filter: grayscale(10%);	
 }
 .galerrytrangchuWrp .imageWrp img:HOVER{
 	-webkit-filter: grayscale(0%);
