--- a/views/childpage/hotrotructuyen.ejs
+++ b/views/childpage/hotrotructuyen.ejs
@@ -5,5 +5,5 @@
 		<a href="mailto:nguyenanhtaidl@yahoo.com">nguyenanhtaidl@yahoo.com</a></span>
 	</p>
 	<p>Email:&nbsp;&nbsp;&nbsp;&nbsp; <span class="label label-primary">
-		<a href="mailto:nguyenanhtaidl@yahoo.com">nguyenanhtaidl@gmail.com</a></span></p>
+		<a href="mailto:nguyenanhtaidl@gmail.com">nguyenanhtaidl@gmail.com</a></span></p>
 </div>
