--- a/views/childpage/slideanh.ejs
+++ b/views/childpage/slideanh.ejs
@@ -6,7 +6,11 @@
 		<img src="image/slide/Cap_nuoc_PPR_Wavin_Pilsa.jpg">
 		<img src="image/slide/Thoat_nuoc_giảm_âm_Wavin_AS.png">
 		<img src="image/slide/van_giam_ap_RBM.png">
+		<img src="image/slide/vat_tu_phu.jpg">
 		<img src="image/slide/thicong.jpg">
+		<img src="image/slide/day_cap_dien.jpg">
+		<img src="image/slide/panasonic.jpg">
+		<img src="image/slide/schneider.jpg">
 	</div>
 </div>
 <script>
@@ -14,13 +18,13 @@
 		$('#slides').slidesjs({
 			width : 500,
 			height : 270,
-			/* 
+			 
 			 play : {
 					active : true,
-					auto : false,
+					auto : true,
 					interval : 4000,
 					swap : true
-			}, */
+			}, 
 			effect : {
 				slide : {
 					speed : 200
