--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 						<% include childpage/blockcacsanphamtrangchu.ejs %>
 	  				</div>
 	  			</div>
-	  			<div class="col-xs-2" style="padding-top: 20px;">
+	  			<div class="col-xs-2" style="padding-top: 20px; margin-left: -30px">
 	  				<% include childpage/galleryanh.ejs %>
 	  			</div>
 			</div>
