--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,9 @@
 
 <title>CÔNG TY TNHH KỸ THUẬT THƯƠNG MẠI T&A</title>
 
+<meta name="description" content="Nhà phân phối ống nước PPR Wavin Ecoplastic, Nhà phân phối ống nước PPR Wavin Pilsa, Nhà phân phối ống nước giảm âm Wavin AS, Nhà phân phối van giảm áp RBM, Sản xuất vật tư phụ, Thi công cơ điện, Nhà phân phối dây, cáp điện<, Nhà phân phối thiết bị điện Panasonic, Nhà phân phối thiết bị điện Schnider">
+
+
 <!-- Bootstrap -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link rel='stylesheet' href='/stylesheets/style.css' />
